--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,6 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" type="text/css" href="bower_components/normalize.css/normalize.css">
-    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet">
   </head>
 
@@ -37,315 +36,7 @@
         <header>Room</header>
 
         <section class="chat-room-messages">
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
 
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box user-message">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>        <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box user-message">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>        <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box user-message">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>        <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box user-message">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>        <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box user-message">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>        <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box user-message">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>        <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box user-message">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>        <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box user-message">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>        <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box user-message">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>        <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box user-message">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>        <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box user-message">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>        <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box user-message">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>        <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box user-message">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>        <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
-
-          <div class="message-box user-message">
-            <div class="user-name odd">Jonathan Smith</div>
-            <div class="message">Hello Anjelina are you there?</div>
-            <div class="when">12:30</div>
-          </div>
         </section>
 
         <footer>
@@ -357,8 +48,18 @@
       </section>
     </section>
 
+    <script id="message-template" type="text/x-handlebars-template">
+      <div class="message-box {{class}}">
+        <div class="user-name odd">{{name}}</div>
+        <div class="message">{{message}}</div>
+        <div class="when">{{time}}</div>
+      </div>
+    </script>
+
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="bower_components/handlebars/handlebars.min.js"></script>
     <script type="text/javascript" src="bower_components/lodash/dist/lodash.compat.min.js"></script>
+    <script type="text/javascript" src="bower_components/moment/min/moment-with-locales.min.js"></script>
     <script type="text/javascript" src="http://127.0.0.1:8009/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="assets/js/chat.js"></script>
   </body>
