--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
 
         </section>
 
-        <footer>
+        <footer class="chat-form">
           <div class="chat-txt">
             <input type="text" class="form-control" tabindex="1" />
           </div>
