--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
     <script type="text/javascript" src="bower_components/handlebars/handlebars.min.js"></script>
     <script type="text/javascript" src="bower_components/lodash/dist/lodash.compat.min.js"></script>
     <script type="text/javascript" src="bower_components/moment/min/moment-with-locales.min.js"></script>
-    <script type="text/javascript" src="http://127.0.0.1:8009/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="http://pian.in:8009/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="assets/js/chat.js"></script>
   </body>
 </html>
