put app into multiple files

--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,14 @@
     <script src="bower_components/angular-socket-io/socket.min.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/angular-moment/angular-moment.js"></script>
+
+    <script src="assets/js/factories/socket-server.js"></script>
+    <script src="assets/js/directives/ng-enter.js"></script>
+    <script src="assets/js/filters/convert-hour.js"></script>
+
+    <script src="assets/js/controllers/users.js"></script>
+    <script src="assets/js/controllers/messages.js"></script>
+
     <script src="assets/js/app.js"></script>
   </body>
 </html>
