--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
     </section>
 
     <script src="http://pian.in:8009/socket.io/socket.io.js"></script>
+    <script src="bower_components/mousetrap/mousetrap.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-socket-io/socket.min.js"></script>
 
@@ -79,5 +80,6 @@
     <script src="assets/js/controllers/messages.js"></script>
 
     <script src="assets/js/app.js"></script>
+    <script src="assets/js/keyboard_shortcuts.js"></script>
   </body>
 </html>
